Add DNS prefetch and preconnect for API to improve loading performance

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=JetBrains+Mono&display=swap"
       rel="stylesheet"
     />
+    <link rel="dns-prefetch" href="https://api.timed.cc" />
+    <link rel="preconnect" href="https://api.timed.cc" crossorigin />
     <title>Timed.cc — quick cross-device link sharing</title>
   </head>
   <body>
